Restaurar proyecto funcional completo